--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				 detection tasks, including RVT, RED, and YOLOv8. We quantitatively evaluate the ability of event-based models to 
 				 generalize on unseen scenes and nighttime data. Through our findings, we substantiate the compelling potential 
 				 of leveraging event cameras for traffic monitoring, opening new avenues for research and application. eTraM 
-				 is available at https://github.com/eventbasedvision/eTram.
+				 is available at https://github.com/eventbasedvision/eTram
 			  </p>
 		</div>
 	</div>
